--- a/.github/workflows/workflow_exe.yml
+++ b/.github/workflows/workflow_exe.yml
@@ -8,9 +8,12 @@ jobs:
     steps:
       - name: Récup appli
         uses: actions/checkout@v4
-      - name: dépendances
-        run: npm ci
-      - name: build
-        run: npm run build
-      - name: test
-        run: npm run test
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Build with Maven
+        run: mvn clean install
+      - name: Test with Maven
+        run: mvn test
