--- a/.github/workflows/workflow_exe.yml
+++ b/.github/workflows/workflow_exe.yml
@@ -8,6 +8,13 @@ jobs:
     steps:
       - name: Récup appli
         uses: actions/checkout@v4
+      - name: Cache Maven dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -17,3 +24,18 @@ jobs:
         run: mvn clean install
       - name: Test with Maven
         run: mvn test
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifact
+          path: target/*.jar
+  download:
+    runs-on: ubuntu-latest
+    needs: mon_job
+    steps:
+      - name: Récupérer l'artéfact
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifact
+      - name: Lister les fichiers
+        run: ls target
