--- a/.github/workflows/workflow_exe.yml
+++ b/.github/workflows/workflow_exe.yml
@@ -11,31 +11,26 @@ jobs:
       - name: Cache Maven dependencies
         uses: actions/cache@v4
         with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-      - name: Build with Maven
-        run: mvn clean install
-      - name: Test with Maven
-        run: mvn test
-      - name: Upload build artifact
+          path: ~/.npm
+          key: ${{ runner.os }}-node-package-${{ hashFiles('**/package-lock.json') }}
+      - name: installation des dépendance
+        run: npm ci
+      - name: build de l'application
+        run: npm run build
+      - name: test
+        run: npm run test
+      - name: Upload du build
         uses: actions/upload-artifact@v4
         with:
-          name: build-artifact
-          path: target/*.jar
+          name: mon_app
+          path: dist
   download:
     runs-on: ubuntu-latest
-    needs: mon_job
+    needs: upload
     steps:
       - name: Récupérer l'artéfact
         uses: actions/download-artifact@v4
         with:
           name: build-artifact
       - name: Lister les fichiers
-        run: ls target
+        run: ls
