--- a/.github/workflows/workflow_exe.yml
+++ b/.github/workflows/workflow_exe.yml
@@ -2,35 +2,41 @@ name: Projet push
 # Le workflow va se déclencher à chaque push de mon application
 on: push
 jobs:
-  job:
+  mon_job:
     name: Build & test
     runs-on: ubuntu-latest
     steps:
       - name: Récup appli
         uses: actions/checkout@v4
-      - name: Cache npm dependencies
+      - name: Cache Maven dependencies
         uses: actions/cache@v4
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-package-${{ hashFiles('**/package-lock.json') }}
-      - name: Installation des dépendances
-        run: npm install
-      - name: Build de l'application
-        run: npm run build
-      - name: Test
-        run: npm run test
-      - name: Upload du build
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Build with Maven
+        run: mvn clean install
+      - name: Test with Maven
+        run: mvn test
+      - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: spring_app
-          path: dist
+          name: build-artifact
+          path: target/
   download:
     runs-on: ubuntu-latest
-    needs: job
+    needs: mon_job
     steps:
       - name: Récupérer l'artéfact
         uses: actions/download-artifact@v4
         with:
-          name: spring_app
+          name: build-artifact
+          path: target/
       - name: Lister les fichiers
-        run: ls dist
+        run: ls target
