--- a/.github/workflows/workflow_exe.yml
+++ b/.github/workflows/workflow_exe.yml
@@ -55,6 +55,7 @@ jobs:
     if: ${{ github.ref == 'refs/heads/main' }}
     env:
       USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      TOKEN: ${{ secrets.DOCKER_TOKEN }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -63,7 +64,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Build Docker image
         run: docker build -t $USERNAME/my_java_app .
