--- a/.github/workflows/workflow_exe.yml
+++ b/.github/workflows/workflow_exe.yml
@@ -66,11 +66,8 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Copy artifact to Docker context
-        run: mkdir -p docker-context && cp target/*.jar docker-context/
-
       - name: Build Docker image
-        run: docker build -t $USERNAME/my_java_app ./docker-context
+        run: docker build -t $USERNAME/my_java_app .
 
       - name: Push Docker image
         run: docker push $USERNAME/my_java_app
