--- a/.github/workflows/workflow_exe.yml
+++ b/.github/workflows/workflow_exe.yml
@@ -10,7 +10,7 @@ jobs:
     name: Build & test
     runs-on: ubuntu-latest
     steps:
-      - name: Récup appli
+      - name: Checkout code
         uses: actions/checkout@v4
       - name: Cache Maven dependencies
         uses: actions/cache@v4
@@ -41,13 +41,15 @@ jobs:
     needs: build_and_test
     if: ${{ github.ref == 'refs/heads/main' }}
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Récupérer l'artéfact
         uses: actions/download-artifact@v4
         with:
           name: build-artifact
           path: target/
-      - name: Lister les fichiers
-        run: ls target
+      - name: Copier l'artefact dans le contexte Docker
+        run: mkdir -p docker-context && cp target/*.jar docker-context/
 
   docker:
     runs-on: ubuntu-latest
@@ -61,13 +63,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v3
+        uses: docker/login-action@v4
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Build Docker image
-        run: docker build -t $USERNAME/my_java_app .
+        run: docker build -t $USERNAME/my_java_app ./docker-context
 
       - name: Push Docker image
         run: docker push $USERNAME/my_java_app
