--- a/.github/workflows/workflow_exe.yml
+++ b/.github/workflows/workflow_exe.yml
@@ -10,7 +10,7 @@ jobs:
     name: Build & test
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Récup appli
         uses: actions/checkout@v4
       - name: Cache Maven dependencies
         uses: actions/cache@v4
@@ -41,15 +41,13 @@ jobs:
     needs: build_and_test
     if: ${{ github.ref == 'refs/heads/main' }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
       - name: Récupérer l'artéfact
         uses: actions/download-artifact@v4
         with:
           name: build-artifact
           path: target/
-      - name: Copier l'artefact dans le contexte Docker
-        run: mkdir -p docker-context && cp target/*.jar docker-context/
+      - name: Lister les fichiers
+        run: ls target
 
   docker:
     runs-on: ubuntu-latest
@@ -69,7 +67,7 @@ jobs:
           password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Build Docker image
-        run: docker build -t $USERNAME/my_java_app ./docker-context
+        run: docker build -t $USERNAME/my_java_app .
 
       - name: Push Docker image
         run: docker push $USERNAME/my_java_app
